2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* src/balsa-app.c (balsa_app_init):
	GtkSettings:gtk-fallback-icon-theme is deprecated

2015-03-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent and a header bar in the no-subject dialog

	* src/sendmsg-window.c (subject_not_empty): use a transient parent
	and a header bar.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent for filter dialogs

	* libbalsa/filter.h: add parent window to filters_edit_dialog
	and filters_export_dialog API.
	* src/filter-edit-dialog.c (filters_edit_dialog): use it, and
	add a header bar.
	* src/filter-export-dialog.c (filters_export_dialog): ditto.
	* src/main-window.c (filters_activated),
	(export_filters_activated): pass the main window as the
	transient parent.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a transient parent for the BalsaFilterRunDialog, and manage
	sensitivity of various buttons

	* libbalsa/filter.h: add parent window to filters_run_dialog
	API.
	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): use it,
	and add a header bar.
	(available_list_selection_changed),
	(selected_list_selection_changed): callbacks for selection
	"changed" signals, so we can set the sensitivity of various
	buttons.
	(balsa_filter_run_dialog_init): connect to the signals, and save
	the buttons in BalsaFilterRunDialog.
	(filters_run_dialog): new API.
	* src/filter-run.h: new members in BalsaFilterRunDialog for the
	buttons.
	* src/mailbox-node.c (mb_filter_cb): pass the main window as the
	transient parent for the dialog.
	* src/main-window.c (select_filters_activated): ditto.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a header bar in the toolbar editor

	* src/toolbar-prefs.c (customize_dialog_cb): use a header bar.
	(create_toolbar_page): add tooltips to direction buttons.

2015-03-14  Peter Bloomfield  <pbloomfield@bellsouth.net>
